--- a/jquery-task/index.html
+++ b/jquery-task/index.html
@@ -4,7 +4,8 @@
 <title>Page Title</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="custom.js"></script>
+<!--<script src="custom.js"></script>-->
+<script src="javascriptfunctions.js"></script>
 </head>
 <body>
 
@@ -16,7 +17,7 @@
 <div class="block section2">
   <h2>Move white element to right 400px with smooth movement on button click</h2>
   <div class="height"></div>
-  <button>click</button>
+  <button id="btn1">click</button>
 </div>
 <div class="block section3">
   <div class="full">
